# nix-incognito

./: .gitignore  Cargo.toml  PKGBUILD  README.md  current_system_config.txt  default.nix  flake.nix  incognito.nix  package.nix
icons/Win11-Dark/: icon-theme.cache
src/: main.rs
src/utils/: cli.rs  gsettings.rs  incognito.rs  mod.rs
